src/pages/admin/TeacherManagement/TeacherManagement.css
.teacher-management-container {
    display: flex;
    justify-content: start;
    align-items: center;
    flex-direction: column;
    max-width: 100%;
    height: 100%;
    padding: 2vh 2vw;
    box-sizing: border-box;
    background-color: var(--admin-grey-background-color);
}


.add-and-search-container {
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 1410px;
}

#add-button {
    width: 110px;
    height: 45px;
    border-radius: 40px;
    background-color: var(--button-blue-background-color);
    border: 0;
    color: white;
}

#search-box {
    border-radius: 40px;
    * {
        border-radius: 40px;
    }
    display: flex;
    justify-content:  end;
    width: 430px;
    height: 40px;
    background-color: white;
    input {
        width: 90%;
        outline: none;
    }
    #search-icon {
        width: 7%;
        height: 40px;
        display: flex;
        justify-content: center;
        align-self: center;
        flex-direction: column;
    }
}

#search-box input {
    border: none;
}

.main-content-container {
    margin-top: 30px;
    background-color: white;
    border-radius: 20px;
    box-sizing: border-box;
}

.view-all-teacher-table {
    width: 100%;
    tbody {
      display: block;
      height: 60vh;
      tr {
        display: table;
        width: 100%;
        table-layout: fixed;
      }
      td {
        padding: 10px 0;
        vertical-align: center;
      }
}  
}

.view-all-teacher-table thead tr td {
    font-weight: bold;
    font-size: 24px;
    color: #5d75c5;
    text-align: left;
}

.col-id {
  width: 5%;
}
.col-name {
  width: 15%;
}
.col-gender {
  width: 10%;
}
.col-email {
  width: 30%;
}
.col-date {
  width: 25%;
}
.col-action {
  width: 15%;
}

td.col-action {
    button {
        padding: 5px 10px;
        border: none;
        color: white;
        border-radius: 10px;
    }
    .button-container {
      display: grid;
      justify-content: space-around;
      grid-template-columns: 1fr 1fr 0.5fr;
      column-gap: 10px;
  }
    .button-edit {
        background-color: var(--button-blue-background-color);
    }
    .button-remove {
        background-color: var(--button-red-background-color);
    }
}

.view-all-teacher-table td,
.view-all-teacher-table th {
  border-bottom: 1px solid #ccc;
  padding: 1vh 0;
}

.view-all-teacher-table {
  border-collapse: collapse;
  width: 100%;
}

.main-content-container {
    padding: 2vh 2vw;
}


.pagination-place {
  display: flex;
  justify-content: end;
  align-items: center;
  height: 40px;
  margin-top: 2vh;
  width: 100%;
}

.pagination-container {
  align-items: center;
  display: flex;
  justify-content: space-around;
  gap: 1vw;
  margin-right: 20px;
}

.pagination-buttons {
  display: flex;
  justify-content: space-around;
  gap: 5%;
  button {
    width: 40px;
    height: 40px;
    background-color: #B6E2EF;
    border-radius: 5px;
    border: none;
    color: white;
    font-weight: 24px;
  }
  button.active {
    background-color: var(--button-blue-background-color);
  }
}

